2005-12-07 Lilia <nursery at s8.xrea.com>
	* kw.rb: unescape HTML for google query in default.

2005-12-04 zunda <zunda at freeshell.org>
	* highlight.rb: apply_plugin before counting sanchor

2005-12-04 Lilia <nursery at s8.xrea.com>
	* kw.rb: support title attribute and add some escapes in HTML.

2005-12-04 Taku YASUI <tach at debian.or.jp>
	* kw.rb: support UTF-8.

2005-12-04 N.KASHIJUKU <n-kashi at whi.m-net.ne.jp>
	* image.rb: swap width and height in image_info method.

2005-12-01  SHIBATA Hiroshi  <h-sbt@nifty.com>
	* makerss.rb: insert link of Tsukkomi in RSS.

2005-11-21  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: move to contrib/util/rast-search/.

2005-11-18  Kazuhiko  <kazuhiko@fdiary.net>
	* recent_trackback3.rb: revise for mod_ruby.
	* recent_comment3.rb: revise for mod_ruby.
	* image.rb (image_info): fix a bug in analysing jpeg files.

2004-11-17 MoonWolf <moonwolf@moonwolf.com>
	* image.rb: rescue ENOENT.

2005-11-13 Kazuhiko  <kazuhiko@fdiary.net>
	* recent_trackback3.rb: revise for mod_ruby.
	* recent_comment3.rb: revise for mod_ruby.

2005-11-11 SHIBATA Hiroshi <h-sbt@nifty.com>
	* daily_theme.rb: use css_tag.

2005-11-10 SHIBATA Hiroshi <h-sbt@nifty.com>
	* daily_theme.rb: add new plugin.

2005-11-02  Kazuhiko  <kazuhiko@fdiary.net>
	* rast-register.rb: revise for rast-0.3.x.

2005-10-20 peo <peo at mb.neweb.ne.jp>
	* rss-recent.rb: support HTTP 304 response.

2005-10-19  Masao Mutoh  <mutoh@highway.ne.jp>
	* counter.rb: Fixed a problem on Win32. Reported by Ken-ichi Mito

2005-10-18 zunda <zunda at freeshell.org>
	* ja/disp_referrer.rb: added net range 72.14.192.0-239.255 for Google cache

2005-10-18 SHIBATA Hiroshi <h-sbt@nifty.com>
	* recent_comment3.rb: fix typo.(nill to nil)
	* recent_trackback3.rb: fix typo.(nill to nil)
	Thanks to yowa <yowa at yowaken.dip.jp>.

2005-10-16 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: add notify about amazon associate ID in preference page.

2005-10-15 zunda <zunda at freeshell.org>